packages/@lwc/template-compiler/src/__tests__/fixtures/parsing-errors/invalid-template-attribute/single-attribute/expected.js
import { registerTemplate } from "lwc";
const stc0 = [];
function tmpl($cmp, $slotset, $ctx) {
  return stc0;
  /*LWC compiler vX.X.X*/
}
export default registerTemplate(tmpl);
tmpl.stylesheets = [];
